--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["Pokemon"],
+  "keywords": [
+    "Pokemon"
+  ],
   "author": "Mattias Lidbeck",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "web-push": "^3.3.1"
+    "web-push": "^3.3.1",
+    "make-dir": "^1.3.0",
+    "prompt": "^1.0.0",
+    "socket.io": "^2.1.1"
   }
 }
